Prueba de cambio

--- a/src/html/includes/navbar.html
+++ b/src/html/includes/navbar.html
@@ -8,7 +8,7 @@
 </div>
 <div class="center">
 <ul class="menu">
-<li><a href="#">FEATURESaaaaaaaaaaaa</a></li>
+<li><a href="#">Prueba de cambio</a></li>
 <li><a href="#">REVIEWS</a></li>
 <li><a href="#">BLOG</a></li>
 <li><a href="#">SUPPORT</a></li>
