--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -15,7 +15,7 @@
         //-Navbar central Desktop
         <div class="center">
             <ul class="menu">
-                <li><a href="#">Prueba de cambio 2</a></li>
+                <li><a href="#">FEATURES</a></li>
                 <li><a href="#">REVIEWS</a></li>
                 <li><a href="#">BLOG</a></li>
                 <li><a href="#">SUPPORT</a></li>
